--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
+    "socket.io": "^4.4.0",
     "ws": "^8.2.3",
     "xml2js": "^0.4.23"
   }
